v2.11.5 - xx xxx xxxx
---------------------

v2.11.4 - 30 Jul 2020
---------------------
   - Bug fixes
   - DPDK
     * OVS validated with DPDK 18.11.9. Due to this being the latest LTS to
       be validated and coupled with the inclusion of fixes for
       CVE-2019-14818, CVE-2020-10722, CVE-2020-10723 and CVE-2020-10724
       over the course of various LTS releases, this DPDK version is strongly
       recommended to be used.

v2.11.3 - 06 Sep 2019
---------------------
   - Fix compilation issue with Ubuntu kernel 4.15.60.

v2.11.2 - 03 Sep 2019
---------------------
   - Bug fixes
   - DPDK
     * OVS validated with DPDK 18.11.2 which is recommended to be used.

v2.11.1 - 30 Mar 2019
---------------------
   - Bug fixes

v2.11.0 - 19 Feb 2019
----------------------
   - OpenFlow:
     * OFPMP_TABLE_FEATURES_REQUEST can now modify table features.
   - ovs-ofctl:
     * "mod-table" command can now change OpenFlow table names.
   - ovn:
     * OVN-SB schema changed: duplicated IP with same Encapsulation type
       is not allowed any more.  Please refer to
       Documentation/intro/install/ovn-upgrades.rst for the instructions
       in case there are problems encountered when upgrading from an earlier
       version.
     * New support for IPSEC encrypted tunnels between hypervisors.
     * ovn-ctl: allow passing user:group ids to the OVN daemons.
     * IPAM/MACAM:
       - add the capability to dynamically assign just L2 addresses
       - add the capability to specify a static ip address and get the L2 one
         allocated dynamically using the following syntax:
           ovn-nbctl lsp-set-addresses <port> "dynamic <IP>"
   - DPDK:
     * Add support for DPDK 18.11
     * Add support for port representors.
     * New option 'other_config:dpdk-socket-limit' to limit amount of
       hugepage memory that can be used by DPDK.
   - Userspace datapath:
     * Add option for simple round-robin based Rxq to PMD assignment.